--- a/qrcode-viewer/src/main/resources/templates/index.html
+++ b/qrcode-viewer/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Form</h1>
+            <h1>QRコード作成ツール</h1>
             <form action="" onsubmit="return false;">
                 <div class="row mb-3">
                     <label for="url" class="col-sm-2 col-form-label">URL</label>
@@ -19,6 +19,12 @@
                     <label for="size" class="col-sm-2 col-form-label">画像の拡大率</label>
                     <div class="col-sm-10">
                         <input type="range" name="size" min="1" th:max="${sizeNum}" class="form-range" id="size" value="1"/><span id="real-size">1</span>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <label for="margin" class="col-sm-2 col-form-label">マージン(セル単位)</label>
+                    <div class="col-sm-10">
+                        <input type="range" name="margin" min="0" th:max="${marginMax}" class="form-range" id="margin" value="0"/><span id="real-margin-max">0</span>
                     </div>
                 </div>
                 <div class="row mb-3">
@@ -37,30 +43,42 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" id="submit-btn" class="btn btn-primary" value="Submit" />
+                <input type="submit" id="submit-btn" class="btn btn-primary my-1" value="作成する" />
             </form>
+            <div class="row mb-3">
+                <div class="col">
+                    <div class="d-flex flex-column">
+                        <img th:src="@{/images/default.png}" class="img-fluid d-block mx-auto my-2" id="qrcode-image" alt="Your QRCode">
+                        <a th:href="@{/images/default.png}" class="btn btn-primary d-block mx-auto" download="qrcode.png" id="qrcode-download">ダウンロード</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
-        <img src="" class="img-fluid" id="qrcode-image" alt="Your QRCode">
+        
 
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script>
-            var btn = document.getElementById('submit-btn');
-            btn.addEventListener('click', function() {
-                var url = $("#url").val();
-                var size = $("#size").val();
-                var version = $("#version").val();
-                var correction = $("#correction").val();
-                $("#qrcode-image").attr('src', `output?url=${url}&size=${size}&version=${version}&correction=${correction}`);
+            $(function() {
+                $("#submit-btn").click(function() {
+                    var url = $("#url").val();
+                    var size = $("#size").val();
+                    var version = $("#version").val();
+                    var correction = $("#correction").val();
+                    var margin = $("#margin").val();
+                    var path = `output?url=${url}&size=${size}&version=${version}&correction=${correction}&margin=${margin}`;
+                    $("#qrcode-image").attr('src', path);
+                    $("#qrcode-download").attr('href', path);
+                });
+                $("#size").change(function(){
+                    var val = $(this).val();
+                    $("#real-size").text(val);
+                });
+                $("#margin").change(function(){
+                    var val = $(this).val();
+                    $("#real-margin-max").text(val);
+                });
             });
-            var elem = document.getElementById('size');
-            var target = document.getElementById('real-size');
-            var rangeValue = function (elem, target) {
-                return function(evt){
-                    target.innerHTML = elem.value;
-                }
-            }
-            elem.addEventListener('input', rangeValue(elem, target));
         </script>
     </body>
 </html>
